# ncdist

./: B4.cpp  C3.h  CMakeLists.txt  CODING_STANDARDS.md  CS6Dist.c  CS6Dist.h  CS6Dist_func.cpp  CS6Dist_func.h  Cell.cpp  Cell.h  CellInputData.cpp  CellInputData.h  CreateFileName.cpp  CreateFileName.h  D6.cpp  D6.h  D7.cpp  D7.h  D7Dist.c  D7Dist.h  D7Dist_.hpp  D7Test.cpp  D7_BoundaryList.cpp  D7_BoundaryList.h  D7_ClassifySubboundaries.cpp  D7_ClassifySubboundaries.h  Delaunay.cpp  Delaunay.h  DelaunayTetrahedron.cpp  DelaunayTetrahedron.h  Delone.cpp  Delone.h  DeloneTetrahedron.cpp  DeloneTetrahedron.h  DeloneType.cpp  DeloneType.h  DeloneTypeList.cpp  DeloneTypeList.h  DeloneTypeVerietyList.h  FileOperations.cpp  (+120 more)
S6G6/UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj  cs6_s6_differences.txt  sample_cells.txt
S6G6/include/: CS6Dist.h  LatticeConverter.h  S6Dist.h
S6G6/src/: MatG6.cpp  S6Dist.cpp  S6G6_test.cpp
cmake/modules/: FindR.cmake  FindRcpp.cmake  FindRcppArmadillo.cmake  FindRcppParallel.cmake
